Fixed tag clicking and search

--- a/tag.html
+++ b/tag.html
@@ -32,7 +32,7 @@
 
     <script src="js/script.js"></script>
 
-    <!-- Sidebar category loader -->
+    <!-- Sidebar category loader
     <script>
       function loadCategories() {
         fetch("updated-menu.html")
@@ -54,7 +54,7 @@
       }
       window.onload = loadCategories;
     </script>
-
+ -->
     <!-- Tag search handling -->
     <script>
       const params = new URLSearchParams(window.location.search);
