Added feedback option in the footer

--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
 <footer class="site-footer">
   <p>© <span id="year"></span> Rencraft</p>
+  <p><a href="https://forms.gle/f1BJ8f6SbaEATJGi9">Leave me feedback</a></p>
 </footer>
