Updated dark mode for menu+header

--- a/header.html
+++ b/header.html
@@ -1,11 +1,12 @@
 <header class="site-header">
   <img src="img/Trillium_flower.svg.png" alt="Icon" class="header-icon" />
-  <span class="header-title">
-  <span class="slr">S
-    <span class="slr-middle">L
-    </span>R
-  </span> Memorial Florilegium
+ <span class="header-title">
+  <span class="slr s">S</span>
+  <span class="slr l">L</span>
+  <span class="slr r">R</span>
+  Memorial Florilegium
 </span>
+
 <button id="modeToggle">🌙</button>
 </header>
 
