--- a/updated-menu.html
+++ b/updated-menu.html
@@ -1,7 +1,7 @@
 <div style="display: flex">
   <div id="sidebar" style="width: 200px; padding: 10px">
  <input type="text" id="sidebarTagSearch" placeholder="Search here..." style="width:100%; margin-bottom:8px;" />
-    <p><a href="index.html" style="text-decoration: none; color: #3a2a1a">🏠 Home</a></p>
+    <p><a href="index.html" class="menu-home" style="text-decoration: none;">🏠 Home</a></p>
     <div id="categoryList">
       <p><a href="about-stefan.html" data-page="about-stefan.html">About THL Stefan li Rous</a></p>
       <p><a href="category-12th-century.html" data-page="category-12th-century.html">12th Century</a></p>
