Added an article in food by region

--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -243,7 +243,14 @@
       <div class="letter-section" id="G">
         <h2>G</h2>
         <ul>
-          <li><a href="#">G</a></li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/What+the+Norse+Greenlanders+Ate.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Greenland - What the Norse Greenladers Ate</a
+            >
+          </li>
           <li><a href="#">G</a></li>
         </ul>
       </div>
