Added more to Food by Region

--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -165,6 +165,15 @@
           </li>
           <li>
             <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Medieval+Arab+Cookery_+Menu+and+Recipes.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Medieval Arab Cookery
+            </a>
+          </li>
+          <li>
+            <a
               href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/MSG-+Africa.pdf"
               target="_blank"
               rel="noopener noreferrer"
@@ -251,7 +260,14 @@
               >Greenland - What the Norse Greenladers Ate</a
             >
           </li>
-          <li><a href="#">G</a></li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Landsknecht+Cooking.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Landsknecht Cooking (Germany)</a
+            >
+          </li>
         </ul>
       </div>
 
@@ -275,14 +291,28 @@
               Lawyers, Legends and Landfills: Early Irish Food
             </a>
           </li>
-          <li><a href="#">Cantaloupe</a></li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/The+adoption+of+New+World+foods+in+Italy..pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >New World Foods in Italy</a
+            >
+          </li>
         </ul>
       </div>
 
       <div class="letter-section" id="J">
         <h2>J</h2>
         <ul>
-          <li><a href="#">#J</a></li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Foods+of+the+Medieval+Passover+Seder.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Foods of the Medieval Passover Seder (Jewish)</a
+            >
+          </li>
           <li><a href="#">J</a></li>
         </ul>
       </div>
@@ -290,7 +320,14 @@
       <div class="letter-section" id="K">
         <h2>K</h2>
         <ul>
-          <li><a href="#">K</a></li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Eating+patterns+in+pre+12th+Century+Khazaria+among+observant+Jews.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >12th c Khazaria Among Observant Jews</a
+            >
+          </li>
           <li><a href="#">K</a></li>
         </ul>
       </div>
@@ -354,8 +391,46 @@
       <div class="letter-section" id="R">
         <h2>R</h2>
         <ul>
-          <li><a href="#">R</a></li>
-          <li><a href="#">R</a></li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Roman+Cuisine.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Roman Cuisine</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Roman+Recipies.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Roman Recipies</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/A+Roman+Soldier's+Diet.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >A Roman Soldier's Diet</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Some+Roman+Recipes.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Some Roman Recipies</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://stefan-florilegium-files.s3.us-east-1.amazonaws.com/Food/Russian+Snacks.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Russian Snacks</a
+            >
+          </li>
         </ul>
       </div>
 
