Updated home page

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         <p>
           What's a `Florilegium'? Literally, it means "a gathering of flowers".
           Florilegia were collections of choice tidbits (from Ovid, Aristotle,
-          various popes, church scholars, etc) arranged topically. Typically, a
-          florilegium is huge, encyclopedic, and contains only choice selections
-          from particular works...
+          various popes, church scholars, etc) arranged topically. 
         </p>
 
         <p>
