--- a/Class-Recordings-by-category.html
+++ b/Class-Recordings-by-category.html
@@ -2572,7 +2572,230 @@
                 📄Recipe
               </a>
             </li>
+<li>
+              <a
+                href="https://youtu.be/zOadNsQdDdY"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Mushroom Pie by Master Katryne MacIntosh the Strange (1 Jan 2024)            </a>
 
+ </li>
+<li>
+              <a
+                href="https://youtu.be/2YfmQPBFsjw"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Tarta de Santiago by Mistress Arielle de Brabazon (26 Dec 2022)         </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/edo0GsgD9WA"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Apple Cake by Countess Jane Falada (27 Dec 2022)  </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/Tm21PGtrF1U"
+                target="_blank"
+                rel="noopener noreferrer"
+              >La Befana Cake by Dame Sara de la Petra (6 Jan 2023)            </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/5EAt-7_eg0U"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Savillum & Sambocade Part 1 by Master Katryne MacIntosh the Strange (27 Dec 2020)         </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/Tt9SOtL6ssQ"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Savillum & Sambocade Part 2 by Master Katryne MacIntosh the Strange (27 Dec 2020)            </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/uNy2S4iAtfg"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Roasted Goose by THL Avice of York  (7 Jan 2021)            </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/57c1S_a4_LU"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Roasted Chicken with Grapes by Dame Tipperith  (7 jan 2021)           </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/L3dO8fl-CFg"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Wassail Cocktail by Dame Tipperith (7 Jan 2021)          </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/vl3FIEb-ql0"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Pumpkin Fries by Dame Sara de la Petra  (7 Jan 2021)          </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/e9FvMkC0s3g"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Pumpkin Soup by Dame Sara de la Petra          (7 Jan 2021)    </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/WkalJS5Fz04"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Bread Pudding Part 1 by Master Katryne MacIntosh the Strange         (7 Jan 2021)   </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/1leK1PyPDlQ"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Bread Pudding Part 2 by Master Katryne MacIntosh the Strange         (7 Jan 2021)    </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/_vhYVPggsIA"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Marzipan by Mistress Arielle de Brabazon         (7 Jan 2021)   </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/OJcHZy4X79U"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Ontbijtkoek (Spiced Cake) Part 1 by Countess Jane Falada            (7 Jan 2021)   </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/OJcHZy4X79U"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Ontbijtkoek (Spiced Cake) Part 2 by Countess Jane Falada  (7 Jan 2021)              </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/_LfTG0KknJA"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Marzipan Part 1 b Mistress Arielle de Brabazon (9 Jan 2021)               </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/l2ii9YK07Lo"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Marzipan Part 2 by Mistress Arielle de Brabazon (9 Jan 2021)            </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/xedGZv9KTd0"
+                target="_blank"
+                rel="noopener noreferrer"
+              >... And Shape Ir Like a Ciambelle by THL Aislinge MacCuithein (2 May 2022)             </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/VXagKe8Y4Po"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Sausages by Tiarna Rørik mac Lugdach (2 May 2020)              </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/pXQ9lQliMLo"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Brandied Raspberry Lemonade by Lady Auelyn Spyle Syngere & Lord Thome Spyle Syngere (22 Apr 2020)             </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/ofBah2hEP4I"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Basic Sauces and Spice Mixes by Sir Mingo (17 May 2020)             </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/R4cFR-CXNqA"
+                target="_blank"
+                rel="noopener noreferrer"
+              >The Basics of Mead Making by Sir Domagnev Volkovich (30 May 2020)           </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/7sQhZKB9_X8"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Planning and Publicizing a War Kitchen Menu by Bannthegn Gwenfrewi (30 May 2020)              </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/_uGhGuoXVbM"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Archaeology of Roman Diet by Honorable Lady Fina MacGrioghair  (28 Apr 2021)         </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/gBneDvFQRZ0"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Archaeology of the Roman Diet by Honorable Lady Fina MacGrioghair (14 Jun 2022)            </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/xSteNrroay0"
+                target="_blank"
+                rel="noopener noreferrer"
+              >Olive Oil: From Antiquity to Your Kitchen by Tellina di Giuseppe da Fiesole (14 Jun 2022)            </a>
+
+ </li>
+<li>
+              <a
+                href="https://youtu.be/0zKOGrgLpfQ"
+                target="_blank"
+                rel="noopener noreferrer"
+              >15th and 16th Century Ottoman Cuisine by Mary Isin (29 Mar 2022)           </a>
+
+ </li>
           </ul>
         </div>
 
