--- a/updated-menu.html
+++ b/updated-menu.html
@@ -44,7 +44,11 @@
       </p>
       <p><a href="category-children.html" data-page="">Children</a></p>
       <p><a href="category-chivalry.html" data-page=" ">Chivalry</a></p>
-      <p><a href="Class-Recordings-by-category.html" data-page="">Class Recordings</a></p>
+      <p>
+        <a href="data\class-recordings-by-category-UPDATED.html" data-page=""
+          >Class Recordings</a
+        >
+      </p>
       <p><a href="category-clothing.html" data-page="">Clothing</a></p>
       <p><a href="category-combat.html" data-page="">Combat</a></p>
       <p>
