--- a/updated-menu.html
+++ b/updated-menu.html
@@ -45,7 +45,7 @@
       <p><a href="category-children.html" data-page="">Children</a></p>
       <p><a href="category-chivalry.html" data-page=" ">Chivalry</a></p>
       <p>
-        <a href="data\class-recordings-by-category.html" data-page=""
+        <a href="class-recordings-by-category.html" data-page=""
           >Class Recordings</a
         >
       </p>
