Fixed Thomas' name, added padding on the homepage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <main style="padding-top: 50px; flex: 1">
+      <main style="padding-top: 50px; padding-left: 50px; flex: 1">
         <h2>Welcome</h2>
         <p>
           This Florilegium was initially assembled by The Honorable Lord Stefan
@@ -54,7 +54,7 @@
         <p>
           What's a `Florilegium'? Literally, it means "a gathering of flowers".
           Florilegia were collections of choice tidbits (from Ovid, Aristotle,
-          various popes, church scholars, etc) arranged topically. 
+          various popes, church scholars, etc) arranged topically.
         </p>
 
         <p>
