--- a/Class-Recordings-by-category.html
+++ b/Class-Recordings-by-category.html
@@ -309,7 +309,7 @@
          ========================== -->
          
       <div class="alphabet-list">
-        <div><h5> These class recordings and handouts have been meticulously gathered by Thomas of Eoforwic.</h5></div>
+        <div><h5> These class recordings and handouts have been meticulously gathered by Thomas Grocere (Ealdormere).</h5></div>
         <!-- A -->
         <div class="letter-section" id="A-Archery">
           <h2>Archery</h2>
