--- a/header.html
+++ b/header.html
@@ -1,14 +1,18 @@
 <header class="site-header">
-  <img src="img/Trillium_flower.svg.png" alt="Icon" class="header-icon" />
- <span class="header-title">
-  <span class="slr s">S</span>
-  <span class="slr l">L</span>
-  <span class="slr r">R</span>
-  Memorial Florilegium
-</span>
+  <button id="sidebarToggle" class="sidebar-toggle">☰</button>
 
-<button id="modeToggle">🌙</button>
+  <span class="header-title">
+    <span class="slr s">S</span>
+    <span class="slr l">L</span>
+    <span class="slr r">R</span>
+    Memorial Florilegium
+  </span>
+
+  <button id="modeToggle">🌙</button>
 </header>
+
+<!-- Overlay for mobile drawer -->
+<div id="mobileSidebarOverlay"></div>
 
 <link
   href="https://fonts.googleapis.com/css2?family=Mea+Culpa&display=swap"
