--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         <ul>
           <li>Browse categories using the sidebar.</li>
           <li>
-            Search by tags or titles in the sidebar search box. You can also
+            Search by keywords, tags or titles in the sidebar search box. You can also
             click on a tag to view all items with that tag.
           </li>
           <li>
-            Download files using the download button on each card. Downloads
+            Open files using the download button on each card, and then download from the new tab that opens. Downloads
             will be in PDF format.
           </li>
         </ul>
