updated footer and collapsed menu in mobile

--- a/header.html
+++ b/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <button id="sidebarToggle" class="sidebar-toggle">☰</button>
+  <button id="sidebarToggle" class="sidebar-toggle mode-style">☰</button>
 
   <span class="header-title">
     <span class="slr s">S</span>
