--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </div>
 
-      <main style="padding-top: 50px; padding-left: 50px; flex: 1">
+      <main style="padding-top: 50px; padding-left: 50px; padding-right: 50px; flex: 1">
         <h2>Welcome</h2>
         <p>
           This Florilegium was initially assembled by The Honorable Lord Stefan
