Added a synonyms array

--- a/category-12th-century.html
+++ b/category-12th-century.html
@@ -55,6 +55,7 @@
 
     <!-- Scripts -->
     <script src="data/header.js"></script>
+    <script src="js/synonyms.js"></script>
     <script src="js/script.js"></script>
     <script src="data/footer.js"></script>
     <script>
