--- a/category-camping.html
+++ b/category-camping.html
@@ -53,6 +53,7 @@
   <script src="data/header.js"></script>
      <!-- Back to Top Button -->
 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
+<script src="js/synonyms.js"></script>
     <script src="js/script.js"></script>
     <script>
       
