--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -150,6 +150,7 @@
       <a href="#Z">Z</a>
     </nav>
 
+    <div id="contentArea"></div>
     <div class="alphabet-list">
       <div class="letter-section" id="A">
         <h2>A</h2>
@@ -485,7 +486,8 @@
 
     <!-- Inject header + handle dark mode -->
     <script src="data/header.js"></script>
-
+    <script src="js/synonyms.js"></script>
+<script src="js/script.js"></script>
     <!-- Back to Top Button -->
     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
       ↑ Top
