--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
             click on a tag to view all items with that tag.
           </li>
           <li>
-            Open files using the download button on each card, and then download from the new tab that opens. Downloads
-            will be in PDF format.
+          Click the “Open Article” button on a card to view the file in a new tab. From there, you can download your own copy directly from your browser.
           </li>
         </ul>
 
@@ -141,6 +140,7 @@
     </script>
     <div id="footer-container"></div>
     <script src="data/footer.js"></script>
+    <script src="js/synonyms.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
