--- a/about-stefan.html
+++ b/about-stefan.html
@@ -130,6 +130,7 @@
     </script>
     <div id="footer-container"></div>
     <script src="data/footer.js"></script>
+    <script src="js/synonyms.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
