--- a/category-food-fruits.html
+++ b/category-food-fruits.html
@@ -51,6 +51,7 @@
      <!-- Inject header + handle dark mode -->
   <script src="data/header.js"></script>
     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
+    <script src="js/synonyms.js"></script>
     <script src="js/script.js"></script>
     <script>
   // Show button when scrolled down
